ALS-9303: Add method to return all concept paths from a query, including derived anyrecordof paths